<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/flower2">

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/edittext_border"
        android:fontFamily="@font/belleza"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241"
        tools:layout_editor_absoluteX="16dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/loginpaswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/edittext_border"
        android:fontFamily="@font/belleza"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmail"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="15dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="163dp"
        android:layout_height="59dp"
        android:layout_margin="15dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/btn_borderless"
        android:fontFamily="@font/belleza"
        android:text="@string/login"
        android:textColor="#F3F3F3"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginpaswd"
        app:layout_constraintVertical_bias="0.158" />

    <Button
        android:id="@+id/forgetpass"
        android:layout_width="163dp"
        android:layout_height="59dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_borderless"
        android:fontFamily="@font/belleza"
        android:text="@string/forgot_password"
        android:textColor="#F3F3F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogIn"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/positionselector"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:background="@drawable/spinnerstyle"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/loginEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>