<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Marks_input"
    tools:layout_editor_absoluteX="-75dp"
    tools:layout_editor_absoluteY="0dp">

    <Spinner
        android:id="@+id/examselect"
        android:layout_width="358dp"
        android:layout_height="48dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/spinnerstyle"
        app:layout_constraintBottom_toTopOf="@+id/Lnr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:id="@+id/Lnr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/examselect">

        <TableLayout
            android:id="@+id/Marks_Table"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp"
            tools:ignore="UselessParent">

            <TableRow>

                <TextView
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:background="@drawable/marksinpdesign"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/student"
                    android:textColor="@color/white"
                    android:textSize="44sp"
                    tools:ignore="TextSizeCheck" />

                <TextView
                    android:id="@+id/Exam"
                    android:layout_width="match_parent"
                    android:layout_height="81dp"
                    android:layout_weight="4"
                    android:background="@drawable/marksinpdesign"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/marks"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textSize="44sp"
                    tools:ignore="TextSizeCheck" />
            </TableRow>

        </TableLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Lnr"
        app:layout_constraintVertical_bias="1.0"
        android:orientation="vertical">


        <Button
            android:id="@+id/newstud"
            android:layout_width="358dp"
            android:layout_height="48dp"
            android:layout_marginBottom="45dp"
            android:background="@drawable/btn_borderless"
            android:text="@string/new_student"
            app:layout_constraintBottom_toTopOf="@id/Save1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Lnr"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/Save1"
            android:layout_width="358dp"
            android:layout_height="48dp"
            android:layout_marginBottom="45dp"
            android:background="@drawable/btn_borderless"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newstud"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="VisualLintButtonSize" />




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>